# passmate-old

./: .gitignore  .gitmodules  README.md  backend.py  cli.py  server.py  setup.py  sync.py
client/: Application.cpp  Application.hpp  CMakeLists.txt  LicenseInfo.hpp  MainWindow.cpp  MainWindow.hpp  MiniCA.cpp  MiniCA.hpp  ScryptEnc.cpp  ScryptEnc.hpp  Storage.cpp  SyncableStorage.cpp  WorkerThread.cpp  WorkerThread.hpp
doc/: TODO  btoken.md  build.md  conf.py  database.rst  encryption.rst  format.rst  index.rst  key_format.md  licenses.md  paths.rst  security.rst  server_protocol.md  synchronization.rst  todo.md
doc/figures/: passmate.vsdx  pdf2png.sh
doc/old/: index.rst  key_format.rst
gui_client/: Application.cpp  Application.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  Makefile  Makefile.OLD  Record.hpp  ScryptEnc.cpp  ScryptEnc.hpp  ScryptEncCPUPerf.hpp  Storage.cpp  Storage.hpp  SyncableStorage.cpp  SyncableStorage.hpp
new/: Application.cpp  Application.hpp  MainWindow.cpp  MainWindow.hpp  Makefile  Record.cpp  Record.hpp  ScryptEnc.cpp  ScryptEnc.hpp  ScryptEncCPUPerf.cpp  Storage.cpp  Storage.hpp  TODO.md
old_python_client/: backend.py
passmate/: cli.py  container.py  db.py  hierarchy.py
passmate_legacy/: cli.py  hierarchy.py
passmate_legacy/gui/: gui.py
server/: server.py
